deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: docker-nginx
  labels:
    app: django-blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-blog
  template:
    metadata:
      labels:
        app: django-blog
    spec:
      containers:
      - name: my-container
        image: yuvrajsimic27/my-img
        ports:
        - containerPort: 80
