service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: docker-nginx
  labels:
    app: django-blog
spec:
  selector:
    app: django-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30001
  type: NodePort
